--- a/random_forest_avalanche_events.ipynb
+++ b/random_forest_avalanche_events.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Random Forest model"
+    "# Random Forest model for prediction of avalanche events"
    ]
   },
   {
