--- a/xgboost_avalanche_events.ipynb
+++ b/xgboost_avalanche_events.ipynb
@@ -4049,7 +4049,7 @@
     "\n",
     "Also I checked combinations of A+B and A+C. \n",
     "\n",
-    "The worst results were from option C) and  A+C). F1-score and recall for avalanche days has dropped. On the other hand, **the best recall for avalanche days had option A) (0.916), therefore this would be my preferred XGBost model.** Even though other options B) and B+A) had slightly better F1-score (0.995 instead of 0.994 for option A) still I prefer A) option. Lower F1-score was consequence of slightly lower recall for days without any avalanche, but this metrics has lesser importance.\n",
+    "The worst results were from option C) and  A+C). F1-score and recall for avalanche days has dropped. On the other hand, **the best recall for avalanche days had option A) (0.916), therefore this would be my preferred XGBoost model.** Even though other options B) and B+A) had slightly better F1-score (0.995 instead of 0.994 for option A) still I prefer A) option. Lower F1-score was consequence of slightly lower recall for days without any avalanche, but this metrics has lesser importance.\n",
     "\n",
     "\n",
     "All the models generated similar F1-scores 0.992–0.995. **Sample without summer months had 0.916 recall for avalanche days, therefore would be the most prefered option**.\n",
